--- a/contenido/Servicios.html
+++ b/contenido/Servicios.html
@@ -62,7 +62,7 @@
         <header class="d-flex justify-content-between">
 
             <a href="../index.html">
-                <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.jpg" alt="logo-valoros" />
+                <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.webp" alt="logo-valoros" />
             </a>
 
             <div class="d-flex d-sm-none w-100 justify-content-end" style="align-items: center;">
@@ -145,7 +145,7 @@
                 <div class="row">
 
                     <div class="col-12 col-sm-6 mb-3 blur-in-expand">
-                        <img class="w-100 rounded" src="../img/img-servicioInspeccion.jpg" alt="">
+                        <img class="w-100 rounded" src="../img/img-servicioInspeccion.webp" alt="">
                     </div>
 
                     <div class="col-12 col-sm-6">
@@ -166,7 +166,7 @@
                             <div class="call-to-action my-4 bg-light rounded p-2 shake-horizontal">
 
                                 <a style="color:transparent" target="_blank"
-                                    href="https://wa.me/+573137708148/?text=Hola, quiero conocer más sobre los productos de oro">
+                                    href="https://wa.me/+573012784797/?text=Hola, quiero conocer más sobre los productos de oro">
                                     <p class="text-dark">Pregunta por la linea de Oro aquí</p>
                                     <div class="text-center">
                                         <i class='bx bxl-whatsapp' style="color:rgb(27, 233, 27); font-size: 60px;"></i>
@@ -197,7 +197,7 @@
                     <i class='bx bx-mail-send contact_icon'></i>
                     <h3 class="contact_title">info@valoros.co</h3>
                     <h3 class="contact_title">Tel.: +604 3629056</h3>
-                    <h3 class="contact_title">Cel/wp: +57 3137708148</h3>
+                    <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
                 </div>
                 <div class="item_contact col">
                     <i class='bx bxs-edit-location contact_icon'></i>
