--- a/contenido/contacto.html
+++ b/contenido/contacto.html
@@ -59,7 +59,7 @@
          <header class="d-flex justify-content-between">
 
             <a href="../index.html">
-                <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.jpg" alt="logo-valoros" />
+                <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.webp" alt="logo-valoros" />
             </a>
 
             <div class="d-flex d-sm-none w-100 justify-content-end" style="align-items: center;">
@@ -71,12 +71,12 @@
             <div class="d-none d-sm-flex justify-content-center">
                 <ul class="d-flex h-100">
                     <li class="has-submenu" style="position: relative;">
-                        <a class="nav-link fs-5 d-flex active" href="#">Corporativo
+                        <a class="nav-link fs-5 d-flex" href="#">Corporativo
                             <i class='bx bx-chevron-down fs-2'></i>
                         </a>
                         <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                             <li>
-                                <a class="nav-link active" href="corporativo.html">Nuestra historia</a>
+                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
@@ -90,7 +90,7 @@
                         <a class="nav-link fs-5" href="sostenibilidad.html">Sostenibilidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-5" href="contacto.html">Contáctenos</a>
+                        <a class="nav-link fs-5 active" href="contacto.html">Contáctenos</a>
                     </li>
                 </ul>
             </div>
@@ -137,7 +137,7 @@
 
                     <div class="col-12 col-sm-6 order-sm-last mb-5">
 
-                        <form action="https://formsubmit.co/info@valoros.co" method="POST">
+                        <form action="https://formsubmit.co/bb2299c131b8c70322d0135dfe83db44" method="POST">
                             <div class="mb-3">
                                 <label for="nombre">Nombre</label>
                                 <input class="form-control" type="text" name="nombre" value="" id="nombre">
@@ -173,7 +173,7 @@
 
                         <h3>Valoros de Colombia</h3>
                         <p><img src="../img/location.png" alt=""> Medellín-Antioquia</p>
-                        <p><img src="../img/call.png" alt=""> Tel/wp: +57 3137708148</p>
+                        <p><img src="../img/call.png" alt=""> Tel/wp: +57 3012784797</p>
                         <p><img src="../img/email.png" alt=""> info@valoros.co</p>
 
                         <!-- <div>
@@ -189,7 +189,7 @@
                             <a href="https://www.facebook.com/valorosdecolombia?mibextid=LQQJ4d" target="_blank" style="color:transparent">
                                 <i class='bx bxl-facebook-square text-dark fs-2'></i>
                             </a>
-                            <a style="color:transparent" target="_blank" href="https://wa.me/+573137708148/?text=Hola, quiero conocer más de los servicios">                           
+                            <a style="color:transparent" target="_blank" href="https://wa.me/+573012784797/?text=Hola, quiero conocer más de los servicios">                           
                                 <i class='bx bxl-whatsapp text-dark fs-2'></i>
                             </a>    
                             <!-- <a href="#" style="color:transparent">
@@ -202,7 +202,7 @@
 
                         <!-- croquis -->
                         <div class="justify-content-center mt-3">
-                            <img class="w-100" src="../img/croquis.png" alt="croquis" />
+                            <img class="w-100" src="../img/croquis.webp" alt="croquis" />
                         </div>
 
                     </div>
@@ -229,7 +229,7 @@
                     <i class='bx bx-mail-send contact_icon'></i>
                     <h3 class="contact_title">info@valoros.co</h3>
                     <h3 class="contact_title">Tel.: +604 3629056</h3>
-                    <h3 class="contact_title">Cel/wp: +57 3137708148</h3>
+                    <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
                 </div>
                 <div class="item_contact col">
                     <i class='bx bxs-edit-location contact_icon'></i>
@@ -244,7 +244,7 @@
 
     </div>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="../js/bootstrap.bundle.min.js"></script> -->
 </body>
 
 </html>
