--- a/contenido/corporativo.html
+++ b/contenido/corporativo.html
@@ -56,7 +56,7 @@
         <header class="d-flex justify-content-between">
 
             <a href="../index.html">
-                <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.jpg" alt="logo-valoros" />
+                <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.webp" alt="logo-valoros" />
             </a>
 
             <div class="d-flex d-sm-none w-100 justify-content-end" style="align-items: center;">
@@ -130,7 +130,7 @@
 
                 <h1 class="text-center mb-5">NUESTRA HISTORIA</h1>
 
-                <img class="w-100" src="../img/image00009.jpeg" alt="">
+                <img class="w-100" src="../img/image00009.webp" alt="">
 
                 <p class="mb-4 mt-2">
                     Las compañias son el resultado de la mezcla de tres factores humanos fundamentales
@@ -223,7 +223,7 @@
             <section class="mt-5 px-5">
 
                 <div class="iconos_sobre_nosotros">
-                    <img src="../img/icono_mision.png" alt="icono_mision">
+                    <img src="../img/icono_mision.webp" alt="icono_mision">
                     <h3 class="titulo_valores">MISIÓN</h3>
                 </div>
 
@@ -236,12 +236,12 @@
                 <div class="row align-items-center">
 
                     <div class="col-12 col-sm-6 order-sm-last mb-3">
-                        <img class="w-100" src="../img/image00013.jpeg" alt="">
+                        <img class="w-100" src="../img/image00013.webp" alt="">
                     </div>
 
                     <div class="col-12 col-sm-6">
                         <div class="iconos_sobre_nosotros">
-                            <img src="../img/icono_vision.png" alt="icono_vision">
+                            <img src="../img/icono_vision.webp" alt="icono_vision">
                             <h3 class="titulo_valores">VISIÓN</h3>
                         </div>
 
@@ -254,7 +254,7 @@
                         </p>
 
                         <div class="iconos_sobre_nosotros mb-2">
-                            <img src="../img/icono_valores.png" alt="icono_valores">
+                            <img src="../img/icono_valores.webp" alt="icono_valores">
                             <h3 class="titulo_valores">VALORES</h3>
                         </div>
 
@@ -294,7 +294,7 @@
                     <i class='bx bx-mail-send contact_icon'></i>
                     <h3 class="contact_title">info@valoros.co</h3>
                     <h3 class="contact_title">Tel.: +604 3629056</h3>
-                    <h3 class="contact_title">Cel/wp: +57 3137708148</h3>
+                    <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
                 </div>
                 <div class="item_contact col">
                     <i class='bx bxs-edit-location contact_icon'></i>
@@ -309,7 +309,7 @@
 
     </div>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="../js/bootstrap.bundle.min.js"></script> -->
 </body>
 
 </html>
