--- a/contenido/sostenibilidad.html
+++ b/contenido/sostenibilidad.html
@@ -58,7 +58,7 @@
         <header class="d-flex justify-content-between">
 
             <a href="../index.html">
-                <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.jpg" alt="logo-valoros" />
+                <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.webp" alt="logo-valoros" />
             </a>
 
             <div class="d-flex d-sm-none w-100 justify-content-end" style="align-items: center;">
@@ -147,7 +147,7 @@
                 
 
                 <div class="text-center mb-3">
-                    <img class="w-25" src="../img/logo-sin-fundacion.jpeg" alt="logo-reverd-ser">
+                    <img class="w-25" src="../img/logo-sin-fundacion.webp" alt="logo-reverd-ser">
                 </div>
                 
 
@@ -173,7 +173,7 @@
                     <i class='bx bx-mail-send contact_icon'></i>
                     <h3 class="contact_title">info@valoros.co</h3>
                     <h3 class="contact_title">Tel.: +604 3629056</h3>
-                    <h3 class="contact_title">Cel/wp: +57 3137708148</h3>
+                    <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
                 </div>
                 <div class="item_contact col">
                     <i class='bx bxs-edit-location contact_icon'></i>
