--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
             <a href="index.html">
-                <img class="w-75" style="margin-left: 20px;" src="img/LogoValoros.jpg" alt="logo-valoros" />
+                <img class="w-75" style="margin-left: 20px;" src="img/LogoValoros.webp" alt="logo-valoros" />
             </a>
 
 
@@ -164,7 +164,7 @@
             <section class="row mb-5 px-5 m-0">
 
                 <div class="col-12 col-lg-6 mb-3">
-                    <img style="border-radius: 5px;" src="img/Oro-plata.png" class="d-block w-100" alt="..." />
+                    <img style="border-radius: 5px;" src="img/Oro-plata.webp" class="d-block w-100" alt="..." />
                 </div>
 
                 <div class="col-12 col-lg-5 d-flex align-items-center ">
@@ -190,7 +190,7 @@
                                 <i class='bx bxl-facebook-square text-white fs-2'></i>
                             </a>
                             
-                            <a style="color:transparent" target="_blank" href="https://wa.me/+573137708148/?text=Hola, quiero conocer más de los servicios">                           
+                            <a style="color:transparent" target="_blank" href="https://wa.me/+573012784797/?text=Hola, quiero conocer más de los servicios">                           
                                 <i class='bx bxl-whatsapp fs-2' style="color:rgb(27, 233, 27)"></i>
                             </a>
                             <a href="https://instagram.com/valoroscolombia?igshid=MzRlODBiNWFlZA==" style="color:transparent" target="_blank">
@@ -215,7 +215,7 @@
                     <i class='bx bx-mail-send contact_icon'></i>
                     <h3 class="contact_title">info@valoros.co</h3>
                     <h3 class="contact_title">Tel.: +604 3629056</h3>
-                    <h3 class="contact_title">Cel/wp: +57 3137708148</h3>
+                    <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
                 </div>
                 <div class="item_contact col">
                     <i class='bx bxs-edit-location contact_icon'></i>
