--- a/contenido/lineaoro.html
+++ b/contenido/lineaoro.html
@@ -59,7 +59,7 @@
         <header class="d-flex justify-content-between">
 
             <a href="../index.html">
-                <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.jpg" alt="logo-valoros" />
+                <img class="w-75" style="margin-left: 20px;" src="../img/LogoValoros.webp" alt="logo-valoros" />
             </a>
 
             <div class="d-flex d-sm-none w-100 justify-content-end" style="align-items: center;">
@@ -160,7 +160,7 @@
                             <div class="call-to-action my-4 bg-light rounded p-2 shake-horizontal">
 
                                 <a style="color:transparent" target="_blank"
-                                    href="https://wa.me/+573137708148/?text=Hola, quiero conocer más sobre los productos de oro">
+                                    href="https://wa.me/+573012784797/?text=Hola, quiero conocer más sobre los productos de oro">
                                     <p class="text-dark">Pregunta por la linea de Oro aquí</p>
                                     <div class="text-center">
                                         <i class='bx bxl-whatsapp' style="color:rgb(27, 233, 27); font-size: 60px;"></i>
@@ -172,8 +172,8 @@
 
                     </div>
                     <div class="col-12 col-sm-6 blur-in-expand">
-                            <img class="w-100 mb-2 rounded" src="../img/IMG_3917.JPEG" alt="">
-                            <img class="w-100 mb-4 rounded" src="../img/3.jpg" alt="">
+                            <img class="w-100 mb-2 rounded" src="../img/IMG_3917.webp" alt="">
+                            <img class="w-100 mb-4 rounded" src="../img/3.webp" alt="">
                     </div>
 
 
@@ -198,7 +198,7 @@
                     <i class='bx bx-mail-send contact_icon'></i>
                     <h3 class="contact_title">info@valoros.co</h3>
                     <h3 class="contact_title">Tel.: +604 3629056</h3>
-                    <h3 class="contact_title">Cel/wp: +57 3137708148</h3>
+                    <h3 class="contact_title">Cel/wp: +57 3012784797</h3>
                 </div>
                 <div class="item_contact col">
                     <i class='bx bxs-edit-location contact_icon'></i>
@@ -213,7 +213,7 @@
 
     </div>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="../js/bootstrap.bundle.min.js"></script> -->
 </body>
 
 </html>
