--- a/historia.html
+++ b/historia.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Valoros</title>
 
-        <link rel="icon" href="../img/LogoValoros -icono.jpg" />
+        <link rel="icon" href="../img/LogoValoros -icono.ico" />
         <link rel="stylesheet" href="../css/nvocss.css" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,15 +16,15 @@
             rel="stylesheet"
         />
 
-        <!-- Global site tag (gtag.js) - Google Ads: 10949085744 -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10949085744"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11534101242"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-            gtag('config', 'AW-10949085744');
-        </script>
+        gtag('config', 'AW-11534101242');
+    </script>
 
         <!-- Event snippet for boton whatsapp conversion page
         In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
